# tmux

./: .ci.yml  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .mailmap  .tmux.conf  .travis.yml  256colres.h  256colres.pl  88colres.h  88colres.pl  AAA_README_VMS.txt  CHANGES  CONTRIBUTING  COPYING  COPYING.md  Cargo.toml  DEVELOPER.md  Dockerfile  FAQ  GNUmakefile  INSTALL  ISSUE_TEMPLATE  Imakefile  KOI8RXTerm.ad  LICENSE  MANIFEST  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  PATCHES  README  README.i18n  README.ja  README.ja.md  README.md  README.os390  (+401 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  genappimage.sh  lock.yml  workflows
.github/ISSUE_TEMPLATE/: custom.md  documentation_review.md  use-this-issue-template.md
.github/travis/: before-install.sh  build-all.sh  build.sh
.github/workflows/: clag-linter.yml  clang-linter.yml  cmake-single-platform.yml  doc_review_reminder.yml  ic.yml  lock.yml  main.yml  regress.yml  regression_tests.yml  tagged-release.yml  test.yml  travis.yml  update-openbsd-and-portable.yml
compat/: asprintf.c  b64_ntop.c  base64.c  bitstring.h  bsd-poll.c  bsd-poll.h  cfmakeraw.c  charwidth.h  clock_gettime.c  closefrom.c  daemon-darwin.c  daemon.c  err.c  explicit_bzero.c  fdforkpty.c  fgetln.c  forkpty-aix.c  forkpty-haiku.c  forkpty-hpux.c  forkpty-irix.c  forkpty-sunos.c  fparseln.c  freezero.c  getdtablecount.c  getdtablesize.c  getline.c  getopt.c  getopt.h  getopt_long.c  getpeereid.c  getprogname.c  htonll.c  imsg-buffer.c  imsg.c  imsg.h  memmem.c  meson.build  ntohll.c  openat.c  queue.h  (+21 more)
examples/: bash_completion_tmux.sh  h-boetes.conf  mxey-start-tmux.sh  n-marriott.conf  n-marriott.sh  nicm-start-tmux.sh  screen-keys.conf  start-tmux.sh  t-williams.conf  tmux-zoom.sh  tmux.vim  tmux_backup.sh  vim-keys.conf  xterm-keys.vim
fuzz/: cmd-parse-fuzzer.c  cmd-parse-fuzzer.dict  format-fuzzer.c  format-fuzzer.dict  input-fuzzer.c  input-fuzzer.dict  style-fuzzer.c  style-fuzzer.dict
icons/: filled-xterm.xpms  filled-xterm_16x16.xpm  filled-xterm_32x32.xpm  filled-xterm_48x48.xpm  make-xpms  mini.xterm.xpms  mini.xterm_16x16.xpm  mini.xterm_32x32.xpm  mini.xterm_48x48.xpm  terminal_48x48.xpm  xterm-color.xpms  xterm-color_16x16.xpm  xterm-color_32x32.xpm  xterm-color_48x48.xpm  xterm.xpms  xterm_16x16.xpm  xterm_32x32.xpm  xterm_48x48.xpm
logo/: LICENSE  tmux-logo-1-color.eps  tmux-logo.eps  tmux-logomark.eps
m4/: ax_require_defined.m4  ax_with_curses.m4  pkg.m4
package/: xterm.spec
package/debian/: changelog  color.sed  control  copyright  postinst  prerm  rules  watch  xterm-dev.docs  xterm-dev.menu  xterm-xres.sed
package/freebsd/: Makefile  pkg-descr  pkg-message  pkg-plist
parser-test/: Makefile  main.c  tmux.h  xstubs.c
parser-test/test-configs/: bind-key-body-verify.tmux  bind-key-body.tmux  command-body-unsupported.tmux  env-tilde.tmux  failure-sequence.tmux  if-else-elif.tmux  if-true.tmux  inline-if.tmux  semicolon.tmux  simple.tmux
presentations/: tmux_asiabsdcon11.odt  tmux_linuxtag_2011.odp
regress/: Makefile  UTF-8-test.txt  active-window.sh  alerts.sh  am-terminal.sh  border-arrows.sh  box-border-basic.sh  buffers.sh  capture-pane-hyperlink.sh  capture-pane-sgr0.sh  cfg-client-lost.sh  check-names.sh  choose-buffer.sh  choose-client.sh  choose-tree.sh  cmd-client-argv.sh  cmd-command-alias.sh  cmd-invoke-deferred.sh  cmd-invoke-expand.sh  cmd-invoke-failure-scope.sh  cmd-invoke-hooks.sh  cmd-invoke-readonly.sh  cmd-parse-errors.sh  cmd-parse-print.sh  cmd-string.sh  cmd-template-replace.sh  codepoint-widths-range.sh  collapse-output.sh  combine-test.result  combine-test.sh  command-alias.sh  command-order.sh  conf-syntax.sh  control-client-exit.sh  control-client-layout.sh  control-client-lost-before-identify.sh  control-client-sanity.sh  control-client-size.sh  control-client-wait-exit.sh  control-notify-events.sh  (+141 more)
regress/screen-redraw-results/: arrows-2pane-left.result  arrows-2pane-right.result  arrows-3pane.result  arrows-4pane.result  bidi-isolates.result  bidi-single.result  bidi-split.result  bigger-bottomright.result  bigger-topleft.result  cache-resize-after.result  cache-resize-before.result  cache-resizeclient-after.result  cache-resizeclient-before.result  cache-rotate-after.result  cache-rotate-before.result  cache-swap-after.result  cache-swap-before.result  cache-window-a.result  cache-window-b.result  colour-three-suppressed.result  colour-two-plus-float.result  cross-double.result  cross-heavy.result  cross-number.result  cross-simple.result  cross-single.result  floating-basic.result  floating-border-double.result  floating-clip-bottom.result  floating-clip-edge.result  floating-clip-left.result  floating-clip-right.result  floating-clip-top.result  floating-clip-topleft.result  floating-clip-window-edge.result  floating-empty-noborder.result  floating-empty.result  floating-mixed-config.result  floating-noborder.result  floating-outside.result  (+63 more)
sixel/: image.c  sixel.c
tektests/: aitest.tek  dmerc.tek  fotest.tek  imtest.tek  imtesth.tek  ocpred.tek  usmap.tek
tools/: 24-bit-color.sh  256colors.pl  ansicode.txt  check-compat.sh  cmp-cvs.sh  dist.mk  fix-ids.sh  fuzz.c  genappimage.sh  image.kitty  image.sixel  putty-utf8.sh  tty-draw-zero-width-livelock-repro.sh  x11-colours.sh
unicode/: README  convmap.pl  keysym.map  make-precompose.sh  precompose.c.head  precompose.c.tail
util/: CMakeLists.txt  UTF-8-demo.txt  config.h.in  fuzz.c
vttests/: 16colors.sh  256colors.pl  256colors2.pl  88colors.pl  88colors2.pl  8colors.sh  acolors.sh  closest-rgb.pl  doublechars.sh  dynamic.pl  dynamic.sh  dynamic2.sh  fonts.sh  paste64.pl  query-color.pl  query-fonts.pl  query-status.pl  resize.pl  resize.sh  tcapquery.pl  title.sh
workflows/: ci.yml
www/: index.html  index.html.in  main.css
